[gd_scene format=3 uid="uid://srs55ncqup0n"]

[ext_resource type="Texture2D" uid="uid://d2h0al4tqjfkr" path="res://assets/custom/code_editor_bg.png" id="1_a43yv"]
[ext_resource type="Script" uid="uid://bjqlhp1vbudw0" path="res://script/ui/user_profile_menu.gd" id="2_7rlxg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7rlxg"]
texture = ExtResource("1_a43yv")
region_rect = Rect2(5, 6, 70, 66)

[node name="UserProfileMenu" type="Panel" unique_id=605145176]
offset_left = 45.0
offset_top = 80.0
offset_right = 357.0
offset_bottom = 285.0
theme_override_styles/panel = SubResource("StyleBoxTexture_7rlxg")
script = ExtResource("2_7rlxg")

[node name="SaveButton" type="Button" parent="." unique_id=57685717]
layout_mode = 0
offset_left = 227.0
offset_top = 116.0
offset_right = 274.0
offset_bottom = 147.0
theme_override_colors/font_color = Color(0.8666667, 0.56078434, 0.38039216, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.19607843, 0.23921569, 1)
theme_override_constants/outline_size = 10
text = "SAVE"

[node name="outputlabel" type="Label" parent="." unique_id=1826902626]
layout_mode = 0
offset_left = 30.0
offset_top = 65.0
offset_right = 278.0
offset_bottom = 108.0
theme_override_colors/font_color = Color(0.8666667, 0.56078434, 0.38039216, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.19607843, 0.23921569, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 14
text = "4 to 10 characters, letters, numbers, 
and underscores only."

[node name="UserNameTextBox" type="TextEdit" parent="." unique_id=1903933188]
layout_mode = 0
offset_left = 30.0
offset_top = 26.0
offset_right = 284.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0.8666667, 0.56078434, 0.38039216, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.19607843, 0.23921569, 1)
theme_override_constants/outline_size = 10
placeholder_text = "USERNAME"

[node name="AddPasscodeButton" type="Button" parent="." unique_id=1689258441]
layout_mode = 0
offset_left = 162.0
offset_top = 154.0
offset_right = 277.0
offset_bottom = 185.0
theme_override_colors/font_color = Color(0.8666667, 0.56078434, 0.38039216, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.19607843, 0.23921569, 1)
theme_override_constants/outline_size = 10
text = "Add Passcode"

[node name="DeletePasscodeButton" type="Button" parent="." unique_id=1079034821]
layout_mode = 0
offset_left = 28.0
offset_top = 116.0
offset_right = 162.0
offset_bottom = 147.0
theme_override_colors/font_color = Color(0.8666667, 0.56078434, 0.38039216, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.19607843, 0.23921569, 1)
theme_override_constants/outline_size = 10
text = "Remove Passcode"

[node name="DeleteButton" type="Button" parent="." unique_id=984228485]
layout_mode = 0
offset_left = 28.0
offset_top = 154.0
offset_right = 151.0
offset_bottom = 185.0
theme_override_colors/font_color = Color(0.8666667, 0.56078434, 0.38039216, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.19607843, 0.23921569, 1)
theme_override_constants/outline_size = 10
text = "Delete Savefile"

[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="AddPasscodeButton" to="." method="_on_add_passcode_button_pressed"]
[connection signal="pressed" from="DeletePasscodeButton" to="." method="_on_delete_passcode_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
